# aws-comparator

./: .dockerignore  .gitignore  BEDROCK_IMPLEMENTATION.md  BEDROCK_QUICK_REFERENCE.md  CLAUDE.md  Dockerfile  README.md  generate_services.py  output.txt  pyproject.toml  pytest.ini
.claude/: settings.json
.claude/agents/: code-cleanup-optimizer.md  code-reviewer.md  codebase-context-analyzer.md  delegation-orchestrator.md  dependency-manager.md  devops-experience-architect.md  documentation-expert.md  task-completion-verifier.md  task-decomposer.md  tech-lead-architect.md
.claude/commands/: ask.md  delegate.md  list-tools.md  pre-commit-checks.sh  pre-commit.md
.claude/hooks/PostToolUse/: python_posttooluse_hook.sh
.claude/hooks/PreToolUse/: require_delegation.sh
.claude/hooks/UserPromptSubmit/: clear-delegation-sessions.sh
.claude/hooks/stop/: python_stop_hook.sh
.claude/output-styles/: technical-adaptive.md
.claude/scripts/: statusline.sh
.claude/state/: delegated_sessions.txt
.claude/system-prompts/: WORKFLOW_ORCHESTRATOR.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
src/aws_comparator/: __init__.py
src/aws_comparator/cli/: commands.py  main.py
src/aws_comparator/comparison/: __init__.py  base.py  name_based_comparators.py  resource_comparator.py  servicequotas_comparator.py
src/aws_comparator/core/: config.py  exceptions.py  logging.py  registry.py
src/aws_comparator/models/: bedrock.py  cloudwatch.py  common.py  comparison.py  ec2.py  elasticbeanstalk.py  eventbridge.py  lambda_svc.py  pinpoint.py  s3.py  secretsmanager.py  servicequotas.py  sns.py  sqs.py
src/aws_comparator/orchestration/: engine.py
src/aws_comparator/output/: base.py
src/aws_comparator/output/formatters/: __init__.py  json_formatter.py  table_formatter.py  yaml_formatter.py
src/aws_comparator/services/: base.py
src/aws_comparator/services/bedrock/: __init__.py  fetcher.py
src/aws_comparator/services/cloudwatch/: __init__.py  fetcher.py
src/aws_comparator/services/ec2/: __init__.py  fetcher.py
src/aws_comparator/services/elasticbeanstalk/: __init__.py  fetcher.py
src/aws_comparator/services/eventbridge/: __init__.py  fetcher.py
src/aws_comparator/services/lambda_service/: fetcher.py
src/aws_comparator/services/pinpoint/: __init__.py  fetcher.py
src/aws_comparator/services/s3/: __init__.py  fetcher.py
src/aws_comparator/services/secretsmanager/: __init__.py  fetcher.py
src/aws_comparator/services/servicequotas/: __init__.py  fetcher.py
src/aws_comparator/services/sns/: __init__.py  fetcher.py
src/aws_comparator/services/sqs/: __init__.py  fetcher.py
tests/: conftest.py
tests/services/: __init__.py  test_base_fetcher.py  test_bedrock.py  test_cloudwatch.py  test_ec2.py  test_elasticbeanstalk.py  test_eventbridge.py  test_lambda.py  test_pinpoint.py  test_s3.py  test_secretsmanager.py  test_servicequotas.py  test_sns.py  test_sqs.py
tests/unit/cli/: test_commands.py  test_main.py
tests/unit/comparison/: __init__.py  test_base_comparator.py  test_name_based_comparators.py  test_resource_comparator.py  test_servicequotas_comparator.py
tests/unit/core/: test_config.py  test_exceptions.py  test_logging.py  test_registry.py
tests/unit/models/: test_comparison_model.py  test_lambda_model.py  test_sqs_model.py
tests/unit/orchestration/: __init__.py  test_engine.py
tests/unit/output/: __init__.py  test_base_formatter.py  test_json_formatter.py  test_table_formatter.py  test_yaml_formatter.py
